--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </header>
     <main>
       <h1>Sidhiq Purnama| WDD 130</h1>
-      <img src="images/Sidhiq.jpg" alt="Sidhiq Purnama" width="200">
+      <img src="Sidhiq.jpg" alt="Sidhiq Purnama" width="200">
       <p>
         He is a student who loves coding and languages.
 Every day he always learns how to create a program and learns vocabulary or language grammar. He can speak at least 5 languages ​​including his mother tongue, namely Indonesian, Javanese, English, Spanish, and Russian. 
@@ -28,7 +28,7 @@ Every day he always learns how to create a program and learns vocabulary or lang
     </main>
     <aside>
       <h2>Mursala Waterfall</h2>
-      <img src="images/WaterFall.jpg"  alt="Marsala Waterfall. One of the beautiful waterfall in the world.">
+      <img src="WaterFall.jpg"  alt="Marsala Waterfall. One of the beautiful waterfall in the world.">
       <p>
         Mursala waterfall is located on Mursala Island which is between Sumatra Island and Nias Island, precisely in Central Tapanuli Regency. With a height of around 35 meters, the water flows over reddish black granite rocks and then falls onto the surface of the Indian Ocean with a thunderous sound. The water flow here never dries up even in the dry season. In the waters below the waterfall, there are various kinds of coral reefs and ornamental fish, including the rare coral reef, Coral Reef. You can see the beauty of Mursala waterfall by renting a boat and sailing around it. The fun thing is, you can also snorkel in the waters below the Mursala waterfall.
       </p>
